<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/hero_android_large"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dealsString"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dealsString2"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:paddingTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp" >
    <EditText
        android:id="@+id/accessCode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/access_code"
        android:background="@drawable/clipped_edittext"
        android:textColor="@color/brown"
        android:textSize="@dimen/login_edittext_text_size"
        android:inputType="textCapCharacters"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"/>
    <Button
        android:id="@+id/loadDealsButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_teal"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:shadowColor="@color/teal_dark"
        android:shadowDx="1.5"
        android:shadowDy="1.5"
        android:shadowRadius="3.0"
        android:text="@string/submit" />
    </LinearLayout>

    <TextView android:id="@+id/noAccessCodeText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="I don't have a code"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:textSize="18sp"
        android:clickable="true"
        android:textColor="@color/teal_dark"
        android:textStyle="bold"

        android:shadowColor="@color/white"
        android:shadowDx="1.5"
        android:shadowDy="1.5"
        android:shadowRadius="3.0"/>
</LinearLayout>