<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/hero_android_large"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    tools:context=".RegistrationActivity"
    android:isScrollContainer="false" >
    
    <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="10dip">
    
        <TextView
            android:id="@+id/forgot_password_msg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center_horizontal"
            android:textColor="@color/brown"
            android:textSize="18sp"
            android:text="@string/instruction_send_password_reset" />
   
    
          <EditText 
                android:id="@+id/forgot_password_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="@dimen/reg_edittext_vertical_margin_bottom"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:hint="@string/email"
                android:background="@drawable/clipped_edittext"
                android:textColor="@color/brown"/>
        
          <Button android:id="@+id/sendEmailBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/reg_button_vertical_margin_top"
                android:onClick="onForgotPasswordClick"
                android:text="@string/request_password_change"
                android:background="@drawable/btn_teal" 
                android:textColor="@color/white"
                android:textStyle="bold"
                android:shadowColor="@color/teal_dark"
		        android:shadowDx="1.5"
		        android:shadowDy="1.5"
		        android:shadowRadius="3.0"/>
 
	</LinearLayout>
</ScrollView>
