<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/brown"
    android:orientation="vertical" >

 	<LinearLayout
 	    android:id="@+id/purchaseClickLayout"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:background="@drawable/button_bar2_brown"
        android:gravity="center|center_vertical"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/buy_now_text"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center|center_vertical"
            android:gravity="center"
            android:text="@string/buy_now"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:layout_weight=".5"
            android:clickable="true"
            android:onClick="onPurchaseClick"/>

        <TextView
            android:id="@+id/enter_code_text"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center|center_vertical"
            android:gravity="center"
            android:text="@string/enter_code"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:layout_weight=".5"
            android:clickable="true"
            android:onClick="onPurchaseClick"/>
    </LinearLayout>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="5dp" 
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true" android:focusableInTouchMode="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/dealOfferDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paybackText"
                    android:textSize="18sp"
                    android:layout_weight=".6"
                    />

                <com.talool.android.util.TaloolSmartImageView
                    android:id="@+id/bookImageView"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="0dp"
                    android:scaleType="fitXY"
                    android:layout_weight=".3" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/listViewLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:orientation="vertical"
                android:padding="10dp"
                android:background="@drawable/list_header">

                <TextView
                    android:id="@+id/summaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </LinearLayout>

            <ListView
                android:id="@+id/dealOffersListView"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:background="@color/white"
                android:listSelector="@android:color/transparent" >
            </ListView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>